[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/music/music2.ogg" type="AudioStream" id=1]
[ext_resource path="res://Assets/music/music1.ogg" type="AudioStream" id=2]
[ext_resource path="res://music/Music.gd" type="Script" id=3]
[ext_resource path="res://Assets/music/music8.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/music/music5.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/music/music4.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/music/music9.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/music/music7.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/music/music3.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/music/music6.ogg" type="AudioStream" id=10]

[node name="Music" type="Node2D"]
script = ExtResource( 3 )

[node name="Music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Music3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Music4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Music5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Music6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Music7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Music8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Music9" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
